# intelligent-rag-framework

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 00_PROJECT_IDENTITY.md  01_CORE_PHILOSOPHY.md  02_LAYER_MODEL.md  03_RUNTIME_LOOP.md  09_GIT_WORKFLOW.md  README.md
ragcore/: __init__.py  condition.py  engine.py  rule_compile.py  rule_gap.py  rule_loader.py  rule_output.py  rule_runtime.py  types.py
ragcore.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_complete_domain_neutral_reference_operation.py  test_condition.py  test_confidence_kernel.py  test_effective_confidence_trace.py  test_engine_ai_readable_usage_recipe.py  test_engine_basic.py  test_engine_claim_lifecycle.py  test_engine_claim_refutation.py  test_engine_claim_status_admission.py  test_engine_consumer_policy_guides_usage.py  test_engine_count_modifier.py  test_engine_count_strength_averaging.py  test_engine_disputed_lifecycle.py  test_engine_disputed_refutation.py  test_engine_disputed_resolution.py  test_engine_effective_confidence.py  test_engine_effective_freshness_modifier.py  test_engine_evidence_freshness.py  test_engine_evidence_type_modifier.py  test_engine_evidence_type_strict_validation.py  test_engine_external_integration_usage.py  test_engine_freshness_refute.py  test_engine_gap_modifier.py  test_engine_gap_severity_tiering.py  test_engine_hint_evidence_type_deregistration.py  test_engine_lifecycle_history.py  test_engine_method_call_playbook_usage.py  test_engine_method_surface_freeze.py  test_engine_persistence.py  test_engine_phase0_taxonomy.py  test_engine_phase4_boundary.py  (+33 more)
(+150 files in other folders)
