[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragcore"
version = "0.1.0"
description = "Intelligent RAG Framework — Python Reference Core"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ragcore*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
